less/modules/wikigrok/WikiGrokDialog.less
@import "minerva.mixins";
@import "minerva.variables";

.wikigrok {
	clear: both;
	margin-top: 1em;
	text-align: center;
	padding: 1em @contentMargin;
	background-color: @grayLightest;
	display: none;

	&.visible {
		display: block;
	}

	.wg-close {
		position: absolute;
		top: 0;
		right: 0;
	}

	.wg-header {
		margin-top: 0;
		color: @grayMedium;
		font-size: 95%;
		text-align: left;
	}

	.wg-content {
		font-size: 120%;
		line-height: 1.2;
		font-weight: bold;
		margin-bottom: .8em;
		text-align: left;
	}

	.wg-buttons {
		margin-bottom: .6em;
		text-align: center;

		// For enwiki prototype only
		.cancel,
		.proceed {
			width: 125px;
		}

		// For enwiki prototype only
		.yes,
		.no {
			width: 72px;
		}
	}

	.wg-notice {
		font-size: 90%;
		margin-bottom: 0;
		text-align: left;
	}
}

